--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "task",
   "version": "0.1.0",
+  "homepage": "https://github.com/KavithaVeera12/pro-analyser-task",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -19,7 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-     "predeploy": "npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
